--- a/sass/_inicio.scss
+++ b/sass/_inicio.scss
@@ -243,7 +243,9 @@
 // TERCERA SECCION INDEX //
 
 .terceraSeccion {
-    background-color: #734D3F;
+    background-image: url("../imagenes/fondo-menuejecutivo.jpg");
+    background-position: center;
+    background-size: cover;
     width: 100%;
     height: 100%;
     padding: 50px 0 50px 0;
@@ -251,42 +253,41 @@
     justify-content: center;
     align-content: center;
     .terceraSeccion__container {
+        background-color: $grisaseo;
         text-align: center;
         display: grid;
         display: flex;
         justify-content: space-evenly;
         grid-template-columns: repeat(2, auto);
-        width: 70%;
+        width: 97%;
         height: 90%;
         align-content: center;
         justify-content: space-evenly;
+        margin-top: 40px;
  
     }
     .terceraSeccion__p {
-         //font-size: 18px;
          text-align: center;
          letter-spacing: 1px;
          word-spacing: 3px;
          width: 450px;
-         padding-top: 10px;
-         margin-right: 30px;
+         padding-top: 50px;
+         margin-right: 20px;
+         padding-left: 50px;
     }
     h3 {
         font-family: $titulos;
-       // font-size: 30px;
         border-bottom: solid 1px #262526;
         padding-bottom: 20px;
     }
     p{
         line-height: 45px;
         padding-top: 10px;
-        //font-size: 20px;
         text-align: center;
         letter-spacing: 2px;
         word-spacing: 5px;
     }
     .pp{
-       //font-size: 30px;
        border: solid 1px #262526;
        border-radius: 20px;
        width: 300px;
@@ -294,13 +295,18 @@
        padding-bottom: 10px;
        font-family: 'IM Fell Double Pica', serif;
        letter-spacing: 5px;
-    
-    
+       background-color: $negro;
+       color: $grisaseo;
+       margin-top: 60px;
+    }
+    .container-img-terceraSeccion{
+        img{
+            padding: 0px 30px 60px 0px;
+            
+        }
     }
 }
-.container-img-terceraSeccion img{
-    border-radius: 3%;
-}
+
 
 //MEDIA QUERIES//
 @media screen and (max-width: 768px){ 
