--- a/sass/main.css
+++ b/sass/main.css
@@ -29,8 +29,16 @@ html {
 }
 
 .fondo .fondo__menu {
-  padding-left: 250px;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.fondo .fondo__menu .logo {
+  -ms-flex-preferred-size: 80%;
+      flex-basis: 80%;
+  margin-left: 30px;
 }
 
 .fondo .fondo__menu .link {
@@ -47,8 +55,7 @@ html {
   color: white;
   font-size: 80px;
   text-align: center;
-  padding: 30px;
-  margin-top: 270px;
+  padding-top: 300px;
   -webkit-animation-duration: 4s;
           animation-duration: 4s;
   -webkit-animation-name: titulo;
@@ -81,6 +88,24 @@ html {
   100% {
     opacity: 1;
   }
+}
+
+.fondo .boton-reservar {
+  display: inline-block;
+  width: 220px;
+  border-radius: 15%;
+  padding: 18px;
+  margin: 20px;
+  font-weight: 100px;
+  font-family: "Raleway", sans-serif;
+  color: white;
+  background-color: #262526;
+}
+
+.fondo a {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 
 footer {
@@ -401,7 +426,9 @@ footer .footer__conteiner img {
 }
 
 .terceraSeccion {
-  background-color: #734D3F;
+  background-image: url("../imagenes/fondo-menuejecutivo.jpg");
+  background-position: center;
+  background-size: cover;
   width: 100%;
   height: 100%;
   padding: 50px 0 50px 0;
@@ -416,6 +443,7 @@ footer .footer__conteiner img {
 }
 
 .terceraSeccion .terceraSeccion__container {
+  background-color: #F2F1F0;
   text-align: center;
   display: -ms-grid;
   display: grid;
@@ -427,11 +455,12 @@ footer .footer__conteiner img {
           justify-content: space-evenly;
   -ms-grid-columns: (auto)[2];
       grid-template-columns: repeat(2, auto);
-  width: 70%;
+  width: 97%;
   height: 90%;
   -ms-flex-line-pack: center;
       align-content: center;
   justify-content: space-evenly;
+  margin-top: 40px;
 }
 
 .terceraSeccion .terceraSeccion__p {
@@ -439,8 +468,9 @@ footer .footer__conteiner img {
   letter-spacing: 1px;
   word-spacing: 3px;
   width: 450px;
-  padding-top: 10px;
-  margin-right: 30px;
+  padding-top: 50px;
+  margin-right: 20px;
+  padding-left: 50px;
 }
 
 .terceraSeccion h3 {
@@ -465,10 +495,13 @@ footer .footer__conteiner img {
   padding-bottom: 10px;
   font-family: 'IM Fell Double Pica', serif;
   letter-spacing: 5px;
+  background-color: #262526;
+  color: #F2F1F0;
+  margin-top: 60px;
 }
 
-.container-img-terceraSeccion img {
-  border-radius: 3%;
+.terceraSeccion .container-img-terceraSeccion img {
+  padding: 0px 30px 60px 0px;
 }
 
 @media screen and (max-width: 768px) {
@@ -631,5 +664,24 @@ footer .footer__conteiner img {
     width: 150px;
     font-size: 20px;
   }
+}
+
+.titulo-sucursales h5 {
+  background-color: rgba(134, 125, 125, 0.8);
+  width: 300px;
+  font-family: "Cormorant Garamond", serif;
+  margin-left: 320px;
+}
+
+.titulo-sucursales .titulo-puertomadero {
+  width: 550px;
+  margin-left: 200px;
+}
+
+.titulo-sucursales p {
+  background-color: rgba(134, 125, 125, 0.8);
+  width: 150px;
+  margin-left: 400px;
+  font-family: "Raleway", sans-serif;
 }
 /*# sourceMappingURL=main.css.map */
