--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -46,3 +46,14 @@ footer {
     }
   }
 }
+@media screen and (max-width: 480px){
+  footer {
+      h6{
+          font-size: 12px;
+      }
+      .footer__conteiner {
+          display: none;
+      }
+    
+  }
+ }
