--- a/sass/main.css
+++ b/sass/main.css
@@ -28,6 +28,10 @@ html {
   background-repeat: no-repeat;
 }
 
+.fondo .fondo__redes {
+  display: none;
+}
+
 .fondo .fondo__menu {
   width: 100%;
   display: -webkit-box;
@@ -91,21 +95,69 @@ html {
 }
 
 .fondo .boton-reservar {
-  display: inline-block;
-  width: 220px;
-  border-radius: 15%;
-  padding: 18px;
-  margin: 20px;
-  font-weight: 100px;
-  font-family: "Raleway", sans-serif;
-  color: white;
+  border-radius: 5%;
+  margin: 15px;
+  padding: 10px 15px;
+  width: 200px;
   background-color: #262526;
+  color: #F2F1F0;
+  border: solid 2px #F2F1F0;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.fondo .boton-reservar:hover {
+  color: #262526;
+  background-color: #F2F1F0;
+  border-color: #F2F1F0;
 }
 
 .fondo a {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
+}
+
+@media screen and (max-width: 768px) {
+  .fondo .fondo__redes {
+    display: none;
+  }
+  .fondo .fondo__menu .logo {
+    margin-left: 210px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .fondo h1 {
+    display: none;
+  }
+  .fondo a {
+    margin: auto auto;
+  }
+  .fondo .fondo__redes {
+    display: block;
+  }
+  .fondo .fondo__redes a {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: right;
+        -ms-flex-pack: right;
+            justify-content: right;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+  }
+  .fondo .fondo__redes a img {
+    margin: 20px;
+  }
+  .fondo .fondo__menu .logo {
+    margin-left: 90px;
+  }
 }
 
 footer {
@@ -148,6 +200,15 @@ footer .footer__conteiner img {
   footer .footer__conteiner {
     right: 1px;
     width: auto;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  footer h6 {
+    font-size: 12px;
+  }
+  footer .footer__conteiner {
+    display: none;
   }
 }
 
@@ -262,6 +323,18 @@ footer .footer__conteiner img {
   }
 }
 
+@media screen and (max-width: 480px) {
+  .primeraSeccion {
+    height: 600px;
+  }
+  .primeraSeccion .primeraSeccion__contenedor {
+    height: 400px;
+  }
+  .primeraSeccion .primeraSeccion__contenedor .container-img img {
+    display: none;
+  }
+}
+
 .galeria {
   background-color: #262526;
   height: 1000px;
@@ -370,58 +443,116 @@ footer .footer__conteiner img {
   background-color: wheat;
   width: 100%;
   height: 100px;
-  position: relative;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-row: 1;
+  grid-row: 1fr;
+  -ms-grid-column: 1;
+  grid-column: 1fr, 1fr;
 }
 
-.segundaSeccion .segundaSeccion__imagen1 {
-  position: absolute;
-  left: 25%;
-  top: 20px;
+.segundaSeccion .segundaSeccion__div1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-grid-row: 1;
+      grid-row-start: 1;
+  grid-row-end: 2;
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+  grid-column-end: 2;
+}
+
+.segundaSeccion .segundaSeccion__div1 .segundaSeccion__imagen1 {
   border-right: solid black 1.5px;
   padding-right: 25px;
+  margin-right: 20px;
 }
 
-.segundaSeccion .segundaSeccion__imagen2 {
-  position: absolute;
-  right: 35%;
-  top: 20px;
+.segundaSeccion .segundaSeccion__div1 .segundaSeccion__p1 {
+  margin-bottom: 10px;
+}
+
+.segundaSeccion .segundaSeccion__div2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-grid-row: 1;
+      grid-row-start: 1;
+  grid-row-end: 2;
+  -ms-grid-column: 2;
+      grid-column-start: 2;
+  grid-column-end: 3;
+}
+
+.segundaSeccion .segundaSeccion__div2 .segundaSeccion__imagen2 {
   border-right: solid black 1.5px;
   padding-right: 25px;
+  margin-right: 20px;
 }
 
-.segundaSeccion .segundaSeccion__p1 {
-  position: absolute;
-  left: 33%;
-  top: 40px;
-  font-size: 15px;
-}
-
-.segundaSeccion .segundaSeccion__p2 {
-  position: absolute;
-  right: 14%;
-  top: 40px;
-  font-size: 15px;
+.segundaSeccion .segundaSeccion__div2 .segundaSeccion__p2 {
+  margin-bottom: 10px;
 }
 
 @media screen and (max-width: 768px) {
   .segundaSeccion p {
-    font-size: 12px;
+    font-size: 15px;
   }
-  .segundaSeccion .segundaSeccion__p1 {
-    left: 17%;
+}
+
+@media screen and (max-width: 480px) {
+  .segundaSeccion {
+    -ms-grid-rows: (1fr)[2];
+        grid-template-rows: repeat(2, 1fr);
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
   }
-  .segundaSeccion .segundaSeccion__p2 {
-    right: 5%;
+  .segundaSeccion .segundaSeccion__div1 {
+    -ms-grid-row: 1;
+        grid-row-start: 1;
+    grid-row-end: 2;
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+    grid-column-end: 2;
+    margin-right: 54px;
   }
-  .segundaSeccion .segundaSeccion__imagen1 .segundaSeccion__imagen2 {
-    width: 60px;
-    height: 30px;
+  .segundaSeccion .segundaSeccion__div1 .segundaSeccion__imagen1 {
+    width: 70px;
+    height: 40px;
   }
-  .segundaSeccion .segundaSeccion__imagen1 {
-    left: 5%;
+  .segundaSeccion .segundaSeccion__div2 {
+    -ms-grid-row: 2;
+        grid-row-start: 2;
+    grid-row-end: 3;
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+    grid-column-end: 2;
+    margin: auto;
   }
-  .segundaSeccion .segundaSeccion__imagen2 {
-    right: 41%;
+  .segundaSeccion .segundaSeccion__div2 .segundaSeccion__imagen2 {
+    width: 70px;
+    height: 40px;
   }
 }
 
@@ -505,29 +636,77 @@ footer .footer__conteiner img {
 }
 
 @media screen and (max-width: 768px) {
+  .terceraSeccion {
+    height: 800px;
+  }
   .terceraSeccion .terceraSeccion__container {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-rows: 1 fr, 1 fr;
-        grid-template-rows: 1 fr, 1 fr;
+    margin: auto;
+    margin: 40px 20px;
   }
   .terceraSeccion .terceraSeccion__container .terceraSeccion__p {
-    width: 100%;
+    width: 350px;
   }
   .terceraSeccion .terceraSeccion__container .terceraSeccion__p h3 {
     font-size: 24px;
+    margin-top: 0px;
   }
   .terceraSeccion .terceraSeccion__container .terceraSeccion__p p {
     font-size: 14px;
+  }
+  .terceraSeccion .terceraSeccion__container .terceraSeccion__p .pp {
+    display: none;
   }
   .terceraSeccion .terceraSeccion__container .container-img-terceraSeccion {
     -ms-grid-row: 3;
         grid-row-start: 3;
   }
   .terceraSeccion .terceraSeccion__container .container-img-terceraSeccion img {
-    width: 70%;
     margin-top: 50px;
     height: 500px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .terceraSeccion {
+    height: 750px;
+  }
+  .terceraSeccion .terceraSeccion__container {
+    position: relative;
+    margin: auto auto;
+    height: 650px;
+  }
+  .terceraSeccion .terceraSeccion__container .terceraSeccion__p {
+    width: 95%;
+  }
+  .terceraSeccion .terceraSeccion__container .terceraSeccion__p h3 {
+    font-weight: 500;
+  }
+  .terceraSeccion .terceraSeccion__container .terceraSeccion__p p {
+    font-weight: 600;
+  }
+  .terceraSeccion .terceraSeccion__container .terceraSeccion__p .boton-teEsperamos {
+    border-radius: 5%;
+    margin-top: 100px;
+    padding: 10px 15px;
+    width: 200px;
+    background-color: #F2F1F0;
+    color: #262526;
+    border: solid 2px #262526;
+    font-size: 15px;
+    font-weight: bold;
+  }
+  .terceraSeccion .terceraSeccion__container .terceraSeccion__p .boton-teEsperamos:hover {
+    color: #F2F1F0;
+    background-color: #262526;
+    border-color: #262526;
+  }
+  .terceraSeccion .container-img-terceraSeccion {
+    position: absolute;
+    opacity: 0.5;
+    /*margin-bottom: 10px;*/
+  }
+  .terceraSeccion .container-img-terceraSeccion img {
+    padding: 0px;
   }
 }
 
@@ -683,5 +862,294 @@ footer .footer__conteiner img {
   width: 150px;
   margin-left: 400px;
   font-family: "Raleway", sans-serif;
+}
+
+.contenedorReservas {
+  background-color: #262526;
+  height: 900px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.contenedorReservas .div-contenedorReservas {
+  border-radius: 2%;
+  background-color: #F2F1F0 !important;
+  width: 70vw;
+  padding-top: 20px;
+}
+
+.contenedorReservas .div-contenedorReservas .titulo-reservas {
+  margin-left: 400px;
+}
+
+.contenedorReservas .div-contenedorReservas .botones-reserva {
+  margin: 30px;
+}
+
+.contenedorReservas .div-contenedorReservas .botones-reserva .botones-reserva1 {
+  background-color: #302314;
+}
+
+.contenedorReservas .div-contenedorReservas .botones-reserva .botones-reserva2 {
+  background-color: #A67458;
+}
+
+main .contenedorContacto1 {
+  background-color: #262526;
+  width: 100vw;
+  height: 800px;
+  display: -ms-grid;
+  display: grid;
+      grid-template-areas: "bife-contacto texto-contacto vino-contacto" "cupcake-contacto canapes-contacto vino-contacto";
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  -ms-grid-rows: (1fr)[2];
+      grid-template-rows: repeat(2, 1fr);
+}
+
+main .contenedorContacto1 .bife-contacto {
+  background-image: url("../imagenes/contacto-bife.jpg");
+  background-position: bottom;
+  background-size: cover;
+}
+
+main .contenedorContacto1 .vino-contacto {
+  background-image: url("../imagenes/contacto-vino-m.jpg");
+  background-position: center;
+  background-size: cover;
+  -ms-grid-row: 1;
+      grid-row-start: 1;
+  -ms-grid-column: 3;
+      grid-column-start: 3;
+  grid-row-end: 3;
+  grid-column-end: 3;
+}
+
+main .contenedorContacto1 .cupcake-contacto {
+  background-image: url("../imagenes/contacto-cupcakes.jpg");
+  background-position: center;
+  background-size: cover;
+}
+
+main .contenedorContacto1 .canapes-contacto {
+  background-image: url("../imagenes/contacto-canapes.jpg");
+  background-position: center;
+  background-size: cover;
+}
+
+main .contenedorContacto1 .texto-contacto {
+  background-color: #262526;
+  color: #F2F1F0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+main .contenedorContacto1 .texto-contacto .p1-contacto {
+  margin: 20px;
+  font-family: "Raleway", sans-serif;
+  font-size: 20px;
+  word-spacing: 7px;
+}
+
+main .contenedorContacto1 .texto-contacto .p2-contacto {
+  margin: 20px;
+  font-family: "Raleway", sans-serif;
+  font-size: 32px;
+  font-weight: bold;
+  letter-spacing: 3px;
+}
+
+main .contenedorContacto1 .texto-contacto a button {
+  margin: 15px;
+  padding: 10px 15px;
+  width: 200px;
+  background-color: #262526;
+  color: #F2F1F0;
+  border: solid 4px #F2F1F0;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+main .contenedorContacto1 .texto-contacto a button:hover {
+  color: #262526;
+  background-color: #F2F1F0;
+  border-color: #F2F1F0;
+}
+
+main .contenedorContacto2 {
+  background-color: #734D3F;
+  width: auto;
+  height: 400px;
+  display: -ms-grid;
+  display: grid;
+      grid-template-areas: "imagen1-contacto texto1-contacto";
+}
+
+main .contenedorContacto2 .imagen1-contacto {
+  background-image: url("../imagenes/contacto-restaurante1.jpg");
+  background-position: center;
+  background-size: cover;
+  width: 400px;
+}
+
+main .contenedorContacto2 .texto1-contacto {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+main .contenedorContacto2 .texto1-contacto h3 {
+  margin-left: 30px;
+  padding: 20px 50px 10px 0px;
+  color: #262526;
+  font-family: "Raleway", sans-serif;
+  font-weight: bold;
+  border-bottom: 1px solid #262526;
+  font-size: 25px;
+}
+
+main .contenedorContacto2 .texto1-contacto p {
+  margin: 20px 200px 50px 30px;
+  font-family: "Cormorant Garamond", serif;
+  font-size: 25px;
+}
+
+main .contenedorContacto3 {
+  background-color: #A67458;
+  width: auto;
+  height: 400px;
+  display: -ms-grid;
+  display: grid;
+}
+
+main .contenedorContacto3 .imagen2-contacto {
+  background-image: url("../imagenes/contacto-restaurante3.jpg");
+  background-position: center;
+  background-size: cover;
+  width: 400px;
+  -ms-grid-column: 3;
+      grid-column-start: 3;
+  grid-row-end: 3;
+  -ms-grid-row: 1;
+      grid-row-start: 1;
+}
+
+main .contenedorContacto3 .texto2-contacto {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+main .contenedorContacto3 .texto2-contacto h3 {
+  margin-left: 50px;
+  padding: 20px 70px 10px 0px;
+  margin-bottom: 20px;
+  color: #262526;
+  font-family: "Raleway", sans-serif;
+  font-weight: bold;
+  border-bottom: 1px solid #262526;
+  font-size: 25px;
+}
+
+main .contenedorContacto3 .texto2-contacto p {
+  margin: 20px 30px 50px 200px;
+  font-family: "Cormorant Garamond", serif;
+  font-size: 25px;
+}
+
+main .contenedorFormulario {
+  background-color: #302314;
+  height: 650px;
+  padding-top: 30px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr, 1fr;
+      grid-template-columns: 1fr, 1fr;
+  -ms-grid-rows: 1fr;
+      grid-template-rows: 1fr;
+  grid-area: "contenedorFormulario contenedorFormulario-texto";
+}
+
+main .contenedorFormulario .formulario {
+  background-color: #fff;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 0px 60px 0px black;
+          box-shadow: 0px 0px 60px 0px black;
+  width: 500px;
+  padding: 30px;
+  margin-bottom: 30px;
+  height: 550px;
+  font-family: "Raleway", sans-serif;
+}
+
+main .contenedorFormulario .formulario legend h4 {
+  margin-left: 60px;
+  font-weight: bold;
+}
+
+main .contenedorFormulario .formulario label {
+  padding: 1px 10px;
+}
+
+main .contenedorFormulario .formulario .boton-formulario {
+  padding: 5px;
+  margin: 8px;
+}
+
+main .contenedorFormulario .contenedorFormulario-texto {
+  -ms-grid-column: 2;
+      grid-column-start: 2;
+  -ms-grid-row: 1;
+      grid-row-start: 1;
+}
+
+main .contenedorFormulario .contenedorFormulario-texto h3 {
+  margin-top: 200px !important;
+}
+
+main .contenedorFormulario .contenedorFormulario-texto h3, main .contenedorFormulario .contenedorFormulario-texto h4 {
+  font-family: 'Fjalla One', sans-serif;
+  font-weight: bold;
+  margin: 30px;
+  font-size: 40px;
+  letter-spacing: 3px;
 }
 /*# sourceMappingURL=main.css.map */
